# arrow_interop

./: CMakeLists.txt  README.md  arrow_flatbuf.h  arrow_io.c  arrow_types.h
include/: l.h
tests/: gen_edges.py  gen_matrix.py  make_fixtures.py  run_all.sh  test_adversarial.py  test_arrow.q  test_edges.q  test_leaks.q  test_load.q  test_matrix.q  test_stream.q
